--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       <div class="konten1"><a href="project1/add2numbers.html" class="button"><b>kalkulator</b></a></div>
       <div class="konten2"><a href="project2/peta.html" class="button"><b>Lokasi Istimewa dengan Mapbox</b></a></div>
       <div class="konten3"><a href="project3/peta.html" class="button">Leaflet dengan <b><i>Fetch JSON</i></b></a></div>
-      <div class="footer"><p>Galih Wangi Putri</p></div>
+      <div class="footer"><p>Galih Wangi Putri cccc</p></div>
     </div>
 
   </body>
